	  See dictionary.iana and
	  https://freeradius.org/rfc/acct_status_type_subsystem.html
	* add reject_unknown_intermediate_ca.  See mods-available/eap
	* Add dynamic loading of certificates via TLS-Session-Cert-File.
	  See raddb/certs/realms/README.md
	* Add Server Name Indication (SNI) for outbound RadSec connections.
	  See raddb/sites-available/tls, and the home server tls configuration.

	Bug fixes
	* Fix crash in trustrouter module (#4115). Patch from Alejandro Perez
	* Fix crash in state handling.
	* Don't alter global options in redhat logrotate scripts.
	* EAP-FAST will print errors and continue, rather than exiting
	  when OpenSSL fails various internal sanity checks.
	* Allow admin to manually change core limits, even when core limits
	  are disabled.
	* Fix chunked rlm_rest HTTP body.  Closes #4131.
	  Patch from Nathan Ward.

FreeRADIUS 3.0.23 Thu 10 Jun 2021 12:00:00 EDT urgency=low
	Feature improvements
	* Update dictionary.aruba
	* Add "set home_server state ... down" in order to mark the
	  home server as administratively down.  Use "alive" to bring
	  it back to life.
	* Add Post-Auth-Type "Client-Lost" which should make it easier
	  to log when clients stop responding.
	* Add sites-available/totp as an example of how to use TOTP.
	* Add %{mschap:Domain-Name}, fixes #3944.
	* Cache TLS messages in &session-state, for more debugging.
	* Notes in eap configuration about TLS 1.0 / TLS 1.1, and setting
	  cipher_list = "DEFAULT@SECLEVEL=1"
	* Added MANY warning messages about using TLS 1.3 with EAP.
	  In short, don't use it.  Microsoft will support it in fall 2021.

	Bug fixes
	* Fix crash in some cases when home server is down, in debug mode.
	* Fix (again) "read clients from SQL" functionality.
	* Fix sql_map to return values in more situations.
	* Silently ignore LEAP configuration instead of erroring out.

FreeRADIUS 3.0.22 Mon 17 May 2021 12:00:00 EDT urgency=low
	Feature improvements